Change logo name

--- a/capplan.html
+++ b/capplan.html
@@ -442,7 +442,7 @@
 </head>
 <body>
   <div>
-    <img class="p-1" src="hgs-logo-alpha.png" alt="hgs healthcare logo" />
+    <img class="p-1" src="logo-alpha.png" alt="company logo" />
     <!-- h2 class="display-3 p-1">HGS HealthCare</h2> -->
     <h4 id="account-header" class="display-4 p-1">Lob List</h4>
     <div class="m-1">
