--- a/capplan.html
+++ b/capplan.html
@@ -10,10 +10,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../Library/js/handsontable-master/handsontable/dist/handsontable.full.min.css" />
     <script type="text/javascript" src="../../Library/js/handsontable-master/handsontable/dist/handsontable.full.min.js"></script>
+    <script type="text/javascript" src="../../Library/js/chart.min.js"></script> <!-- for HTML5 canvas charts -->
     <script type="text/javascript" src="../../Library/js/PapaParse/papaparse.min.js"></script> <!-- for parsing csv files -->
-    <script type="text/javascript" src="../../Library/js/Rama/stat_functions.js"></script> <!-- for parsing csv files -->
+    <script type="text/javascript" src="../../Library/js/Rama/stat_functions.js"></script> <!-- for mathematical statistical functions -->
     <script type="text/javascript" src="./capplan.js"></script>
-    <script type="text/javascript" src="./erlang.js"></script>
+    <script type="text/javascript" src="./erlang.js"></script> <!-- for Erlang C WFM calculations -->
 
     <script>
       "use strict";
@@ -27,9 +28,11 @@
       function test_erlang() {
         let con = document.getElementById("other_test");
 
-        con.innerHTML += erlang_probability(10, 11) + "<br />";
-        con.innerHTML += erlang_service_level(11, 200, 180, 20) + "<br />";
-        con.innerHTML += erlang_agents(1, 200, 180, 0.8, 20) + "<br />";
+        //con.innerHTML += erlang_probability(10, 11) + "<br />";
+        //con.innerHTML += erlang_service_level(13, 200, 180, 20) + "<br />";
+        //con.innerHTML += erlang_agents({volume: 200, aht_secs: 180, service_level: 0.8, thres_secs: 20}) + "<br />";
+        con.innerHTML += erlang_agents({volume: 13149, aht_secs: 300, service_level: 0.8, thres_secs: 20, interval_dur: 40}) + "<br />";
+        con.innerHTML += erlang_agents({volume: 131409, aht_secs: 300, service_level: 0.9, thres_secs: 21, interval_dur: 40}) + "<br />";
       }
     </script>
 </head>
