Fix Erlang C calculation with interval_dur

--- a/capplan.html
+++ b/capplan.html
@@ -29,10 +29,10 @@
         let con = document.getElementById("other_test");
 
         //con.innerHTML += erlang_probability(10, 11) + "<br />";
-        //con.innerHTML += erlang_service_level(13, 200, 180, 20) + "<br />";
-        //con.innerHTML += erlang_agents({volume: 200, aht_secs: 180, service_level: 0.8, thres_secs: 20}) + "<br />";
-        con.innerHTML += erlang_agents({volume: 13149, aht_secs: 300, service_level: 0.8, thres_secs: 20, interval_dur: 40}) + "<br />";
-        con.innerHTML += erlang_agents({volume: 131409, aht_secs: 300, service_level: 0.9, thres_secs: 21, interval_dur: 40}) + "<br />";
+        con.innerHTML += erlang_service_level(25, 298.75, 300, 20, 1) + "<br />";
+        con.innerHTML += erlang_agents({volume: 11950, aht_secs: 300, service_level: 0.8, thres_secs: 20, interval_dur: 40}) + "<br />";
+        //con.innerHTML += erlang_agents({volume: 13149, aht_secs: 300, service_level: 0.8, thres_secs: 20, interval_dur: 40}) + "<br />";
+        //con.innerHTML += erlang_agents({volume: 131409, aht_secs: 300, service_level: 0.9, thres_secs: 21, interval_dur: 40}) + "<br />";
       }
     </script>
 </head>
